--- a/.github/workflows/encode_install_script.yml
+++ b/.github/workflows/encode_install_script.yml
@@ -28,5 +28,5 @@ jobs:
         git config user.email "github-actions[bot]@users.noreply.github.com"
 
         git add .
-        git diff --cached --quiet || git commit -m "Auto-encode file to base64"
+        git diff --cached --quiet || git commit -m "Auto-encode install.sh to base64"
         git push
